--- a/trendyol.html
+++ b/trendyol.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="noindex, nofollow, noarchive, noimageindex">
+    <meta name="robots" content="noindex, nofollow">
     <meta name="googlebot" content="noindex, nofollow">
     <title>TRENDYOL | Lisa Voronov</title>
+    <meta property="og:title" content="TRENDYOL | Lisa Voronov">
+    <meta property="og:image" content="https://lisavoronov.com/LV.png">
+    <meta property="og:type" content="website">
     <link rel="icon" type="image/png" href="Favicon.png">
     <style>
-        /* ... (шрифты и базовые стили остаются те же) ... */
         @font-face {
             font-family: 'Notbad Sans';
             src: url('Notbad-sans-Regular.woff2') format('woff2');
@@ -30,10 +32,10 @@
             font-family: 'Notbad Sans', sans-serif; 
             color: #0D0D0D;
             -webkit-font-smoothing: antialiased;
-            overflow: hidden; 
-            height: 100vh;
+            overflow-x: hidden;
         }
 
+        /* --- ДЕСКТОП --- */
         .info-side {
             width: 50%;
             height: 100vh;
@@ -42,25 +44,24 @@
             top: 0;
             display: flex;
             flex-direction: column;
-            justify-content: space-between;
+            /* Изменили, чтобы элементы не разлетались */
+            justify-content: flex-start; 
             padding: 10vh 80px; 
             box-sizing: border-box;
             background: #ffffff;
             z-index: 10;
         }
 
-        .back-link, .description, .nav-arrows, .footer-bottom { font-size: 15px; }
-
         .back-link {
             text-decoration: none;
             color: #0D0D0D;
             text-transform: uppercase;
             letter-spacing: 0.1em;
-            display: inline-block;
-            line-height: 1;
+            font-size: 15px;
         }
 
         .description {
+            font-size: 15px;
             line-height: 18px; 
             max-width: 480px;
             margin-top: 40px;
@@ -70,14 +71,18 @@
 
         .brand-name { font-family: 'Notbad Sans Bold', sans-serif; font-weight: bold; }
 
-        .left-footer { display: flex; flex-direction: column; gap: 15px; }
-
-        .nav-arrows { display: flex; justify-content: space-between; }
-
+        .left-footer { 
+            display: flex; 
+            flex-direction: column; 
+            gap: 15px; 
+            margin-top: auto; /* Прижимает футер к низу, но сохраняет gap */
+        }
+        
+        .nav-arrows { display: flex; justify-content: space-between; font-size: 15px; }
         .nav-arrows a { text-decoration: none; color: #0D0D0D; transition: opacity 0.3s; }
         .nav-arrows a:hover { opacity: 0.5; }
 
-        .footer-bottom { display: flex; justify-content: space-between; align-items: center; line-height: 1; }
+        .footer-bottom { display: flex; justify-content: space-between; align-items: center; font-size: 15px; }
         .footer-bottom a { color: #0D0D0D; text-decoration: none; }
 
         .right-side {
@@ -87,7 +92,6 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            overflow: hidden;
             background: #ffffff;
         }
 
@@ -95,82 +99,80 @@
             width: 80%;
             height: 80vh;
             object-fit: contain;
-            display: block;
-            /* УБРАЛИ transition: здесь больше нет анимации, только мгновенная смена */
         }
 
-        .mobile-gallery { display: none; }
-        .mobile-footer { display: none; }
-        .mobile-nav { display: none; }
-
+        /* --- МОБИЛЬНАЯ ВЕРСИЯ --- */
         @media (max-width: 768px) {
-            body {
-                flex-direction: column;
-                height: auto;
-                overflow-y: auto;
+            body { flex-direction: column; overflow-y: auto; }
+
+            .mobile-top-nav {
+                position: fixed;
+                top: 0;
+                left: 0;
+                width: 100%;
+                background: #ffffff;
+                padding: 20px;
+                z-index: 9999;
+                box-sizing: border-box;
+                display: block;
             }
+
             .info-side {
                 width: 100%;
                 height: auto;
                 position: relative;
-                padding: 0 20px 40px;
+                padding: 80px 20px 20px; 
+                z-index: 10;
+                display: block; /* Убираем flex на мобильных для корректных отступов */
             }
-            .right-side {
-                display: none;
-            }
-            .back-link {
-                position: -webkit-sticky;
-                position: sticky;
-                top: 0;
-                display: block;
-                background: #ffffff;
-                padding: 40px 0 20px 0;
-                z-index: 100;
-            }
+
+            .right-side { display: none; }
+
             .mobile-gallery {
                 display: flex;
                 flex-direction: column;
                 width: 100%;
-                padding: 20px;
+                padding: 0 20px;
                 box-sizing: border-box;
             }
             .mobile-gallery img {
                 width: 100%;
                 height: auto;
                 margin-bottom: 20px;
-                display: block;
             }
-            .info-side .footer-bottom {
+
+            .info-side .left-footer, .info-side .back-link {
                 display: none;
             }
-            .info-side .nav-arrows {
-                display: none;
-            }
-            .mobile-nav {
-                display: flex;
-                padding: 0 20px;
-            }
+
             .mobile-footer {
                 display: flex;
                 justify-content: space-between;
-                align-items: center;
-                padding: 20px 20px 50px 20px;
+                padding: 40px 20px;
+                font-size: 14px;
+            }
+            .mobile-footer a { color: #0D0D0D; text-decoration: none; }
+            
+            .mobile-nav-arrows {
+                display: flex;
+                justify-content: space-between;
+                padding: 20px;
+                border-top: 1px solid #eee;
                 font-size: 15px;
-                width: 100%;
-                box-sizing: border-box;
             }
-            .mobile-footer a {
-                color: #0D0D0D;
-                text-decoration: none;
-            }
-            .description { 
-                text-align: left; 
-                margin-top: 20px;
-            }
+            .mobile-nav-arrows a { text-decoration: none; color: #0D0D0D; }
+        }
+
+        @media (min-width: 769px) {
+            .mobile-top-nav, .mobile-footer, .mobile-nav-arrows, .mobile-gallery { display: none; }
         }
     </style>
 </head>
 <body>
+
+    <div class="mobile-top-nav">
+        <a href="index.html?p=3" class="back-link">← Back to portfolio</a>
+    </div>
 
     <div class="info-side">
         <div>
@@ -178,7 +180,7 @@
             <div class="description">
                 <span class="brand-name">TRENDYOL</span> is a leading Turkish e-commerce platform. 
                 <br><br>
-                As part of the collaboration, I developed printed flyers, visually structuring voluminous business information into concise, easy-to-read materials. Working under tight deadlines, I transformed complex data on the company's growth and key achievements into clear visual storytelling that highlighted the brand's value and market dynamics.
+                As part of the collaboration, I developed printed flyers, visually structuring voluminous business information into concise, easy-to-read materials. Working under tight deadlines, I transformed complex data on the company's growth and key achievements into clear visual storytelling.
             </div>
         </div>
 
@@ -187,7 +189,6 @@
                 <a href="iles-formula.html">‹ Previous</a>
                 <a href="kaa.html">Next ›</a>
             </div>
-
             <div class="footer-bottom">
                 <a href="mailto:zumkult@gmail.com">zumkult@gmail.com</a>
                 <div class="copyright">© 2026 Lisa Voronov</div>
@@ -208,7 +209,7 @@
         <img src="work31.png" loading="lazy">
     </div>
 
-    <div class="nav-arrows mobile-nav">
+    <div class="mobile-nav-arrows">
         <a href="iles-formula.html">‹ Previous</a>
         <a href="kaa.html">Next ›</a>
     </div>
@@ -219,36 +220,22 @@
     </div>
 
     <script>
-        const images = [
-            'work26.png',
-            'work27.png',
-            'work28.png',
-            'work29.png',
-            'work30.png',
-            'work31.png'
-        ];
-
-        // 1. Предзагружаем картинки, чтобы они уже были в памяти
-        const cache = [];
-        images.forEach((src) => {
+        const images = ['work26.png', 'work27.png', 'work28.png', 'work29.png', 'work30.png', 'work31.png'];
+        const cache = images.map(src => {
             const img = new Image();
             img.src = src;
-            cache.push(img);
+            return img;
         });
 
         let currentIndex = 0;
         const dynamicImg = document.getElementById('dynamic-work');
 
-        // 2. Мгновенная смена без задержек
-        function changeImage() {
-            currentIndex = (currentIndex + 1) % images.length;
-            // Теперь это происходит мгновенно, так как файл уже в кэше
-            dynamicImg.src = images[currentIndex];
+        if (dynamicImg) {
+            setInterval(() => {
+                currentIndex = (currentIndex + 1) % images.length;
+                dynamicImg.src = images[currentIndex];
+            }, 1000);
         }
-
-        // Интервал 1 секунда, как ты и просила
-        setInterval(changeImage, 1000);
     </script>
-
 </body>
 </html>
