--- a/trendyol.html
+++ b/trendyol.html
@@ -209,6 +209,7 @@
         <img src="work31.png" loading="lazy">
     </div>
 
+  <div class="mobile-bottom-wrapper">
     <div class="mobile-nav-arrows">
         <a href="iles-formula.html">‹ Previous</a>
         <a href="kaa.html">Next ›</a>
@@ -218,6 +219,7 @@
         <a href="mailto:zumkult@gmail.com">zumkult@gmail.com</a>
         <div class="copyright">© 2026 Lisa Voronov</div>
     </div>
+</div>
 
     <script>
         const images = ['work26.png', 'work27.png', 'work28.png', 'work29.png', 'work30.png', 'work31.png'];
